--- a/index.html
+++ b/index.html
@@ -6,9 +6,39 @@
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <!--<script src='main.js'></script> -->
+    <script src='main.js'></script> 
 </head>
 <body>
-    <div class="btn">1</div>
+    <div class="row">
+        <input class="inp" disabled value="123 + 18400 * 2">
+    </div>
+
+    <div class="row">
+        <div class="btn">7</div>
+        <div class="btn">8</div>
+        <div class="btn">9</div>
+        <div class="btn">=</div>
+    </div>
+
+    <div class="row">
+        <div class="btn">4</div>
+        <div class="btn">5</div>
+        <div class="btn">6</div>
+        <div class="btn">+</div>
+    </div>
+
+    <div class="row">
+        <div class="btn">1</div>
+        <div class="btn">2</div>
+        <div class="btn">3</div>
+        <div class="btn">-</div>
+    </div>
+
+    <div class="row">
+        <div class="btn btn-lg">0</div>
+        <div class="btn">/</div>
+        <div class="btn">*</div>
+    </div>
+    
 </body>
 </html>
