계산기 구현 완료

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="btn" onclick="inputNum(7)">7</div>
         <div class="btn" onclick="inputNum(8)">8</div>
         <div class="btn" onclick="inputNum(9)">9</div>
-        <div class="btn">=</div>
+        <div class="btn" onclick="inputEqu()">=</div>
     </div>
 
     <div class="row">
